kubernetes/apps/home/penpot/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: penpot
  namespace: home
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  hostnames:
    - penpot.ironstone.casa
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: penpot-frontend
          port: 80
